# programming-labs-c

./: .gitignore  CMakeLists.txt  Lab1.c  Lab10.c  Lab11.c  Lab12.c  Lab2.c  Lab3.c  Lab4.c  Lab5.c  Lab6.c  Lab7.c  Lab8.c  Lab9.c  README.md  funcs.inc
Lab1/: main.c
Lab13/: 11.c  11.h  12.c  12.h  Lab13.c
Lab14/: 11.c  9.c  text_data.txt  text_result.txt
