cmake_minimum_required(VERSION 3.26)
project(LabsC)  # Можно назвать как угодно, например MyLabs

# Добавляем исполняемый файл для Lab1
add_executable(Lab1 Lab1/main.c)

# Добавляем исполняемый файл для Lab2 (когда будете делать)
# add_executable(Lab2 Lab2/main.c)

# Добавляем исполняемый файл для Lab3 (когда будете делать)
# add_executable(Lab3 Lab3/main.c)

# Для каждой новой лабораторной просто добавляйте новую строку:
# add_executable(Lab4 Lab4/main.c)
# add_executable(Lab5 Lab5/main.c)