cmake_minimum_required(VERSION 4.0)
project(programming_labs_c C)

set(CMAKE_C_STANDARD 11)

add_executable(Lab1 Lab1.c)
add_executable(Lab2 Lab2.c)
add_executable(Lab3 Lab3.c)
add_executable(Lab4 Lab4.c)
add_executable(Lab5 Lab5.c)
add_executable(Lab6 Lab6.c)
add_executable(Lab7 Lab7.c)
add_executable(Lab8 Lab8.c)
add_executable(Lab9 Lab9.c)
add_executable(Lab10 Lab10.c)
add_executable(Lab11 Lab11.c)
add_executable(Lab12 Lab12.c)
add_executable(Lab13
        Lab13/Lab13.c
        Lab13/11.c
        Lab13/12.c
)
